Fix about me title style issue on mobile

--- a/_sass/partial/_header.scss
+++ b/_sass/partial/_header.scss
@@ -43,9 +43,6 @@
   flex: $headerNav;
   height: 4.2rem;
   line-height: 4.2rem;
-  a:nth-child(2) {
-    width: 8rem;
-  }
 }
 
 .header-social {
